<resources>
    <string name="app_name">Campus UCI</string>
    <string name="action_settings">Configuración</string>
    <string name="actions_about">Sobre...</string>
    <string name="actions_filter">Filtro</string>
    <string name="actions_search">Buscar</string>
    <string name="actions_search_in">Buscar en...</string>
    <string name="dominio">uci.cu</string>
    <string name="campus_universitario">Campus Universitario</string>
    <string name="rss_uci_title">Rss</string>
    <string name="rss_uci_subtitle">Manténgase informado</string>
    <string name="directorio_uci_title">Directorio</string>
    <string name="directorio_uci_subtitle">Personas de la Universidad</string>
    <string name="cuota_uci_title">Cuota</string>
    <string name="cuota_uci_subtitle">Cuota de navegación de internet</string>
    <string name="horario_uci_title">Horario</string>
    <string name="horario_uci_subtitle">Asistencia y Puntualidad</string>
    <string name="menu_uci_title">Menú</string>
    <string name="menu_uci_subtitle">Almuerzo y Comida</string>
    <string name="mapa_uci_title">Mapa</string>
    <string name="mapa_uci_subtitle">Localización Geográfica</string>
	<string name="repo_uci_title">Repositorio</string>
	<string name="repo_uci_subtitle">Descarga aplicaciones</string>
    <string name="develop_by">Desarrollado por:</string>
    <string name="yannier">Yannier González Pedroso</string>
    <string name="andy">Andy Luis Hernández Romero</string>
    <string name="version">Version: 1.1</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="name">Nombre:</string>
    <string name="building">Edificio:</string>
    <string name="category">Categoría:</string>
    <string name="credencial">Solapín:</string>
    <string name="prov_mun">Provincia y Municipio:</string>
    <string name="dni">Dni:</string>
    <string name="phone">Teléfono:</string>
    <string name="email">Correo:</string>
    <string name="sexo">Sexo:</string>
    <string name="dudas_sugerencias">Dudas o Sugerencias</string>
    <string name="title_activity_rss">RssActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_cuota">CuotaActivity</string>
    <string name="title_activity_horario">HorarioActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_mapa">MapaActivity</string>
    <string name="no_disponible">No disponible</string>
    <string name="usuario">Usuario:</string>
    <string name="exp">Id.Expediente:</string>
    <string name="area">Área:</string>
    <string name="error_user">Error de Usuario</string>
    <string name="error_user_pass">Error de usuario o contraseña</string>
    <string name="error_cred">Error de Solapín</string>
    <string name="error_exp">Error de Id. Expediente</string>
    <string name="error_con">Error de Conexión</string>
    <string name="name_">Nombre</string>
    <string name="building_">Edificio</string>
    <string name="category_">Categoría</string>
    <string name="credencial_">Solapín</string>
    <string name="prov_mun_">Provincia y Municipio</string>
    <string name="dni_">Dni</string>
    <string name="phone_">Teléfono</string>
    <string name="email_">Correo</string>
    <string name="sexo_">Sexo</string>
    <string name="area_">Área</string>
    <string name="exp_">Id.Expediente</string>
    <string name="search_user">Búsqueda por usuario</string>
    <string name="search_exp">Búsqueda por Id. Expediente</string>
    <string name="search_cred">Búsqueda por solapín</string>
    <string name="action_add">Adicionar a contactos</string>
    <string name="no_blank">Debe introducir un valor</string>
    <string name="no_result">No hay resultados disponibles</string>
    <string name="no_news">No hay noticias disponibles</string>
    <string name="exit">Está seguro de Salir</string>
    <string name="dinner">Comida:</string>
    <string name="lunch">Almuerzo:</string>
    <string name="dragones">Dragon3s</string>
    <string name="octavitos">Octavitos</string>
    <string name="fac5">Facultad 5</string>
    <string name="fac6">Facultad 6</string>
    <string name="zorros">Zorros</string>
    <string name="share">Compartir</string>
    <string name="about">Sobre...</string>
    <string name="load">Cargando...</string>
    <string name="who">Desarrollado por:</string>
    <string name="ygpedroso">--Yannier González Pedroso</string>
    <string name="alromero">--Andy Luis Hernández Romero</string>
    <string name="uci">uci.cu 2015</string>
    <string name="last_search">Última búsqueda</string>
    <string name="clean">Limpiar</string>
    <string name="download">Descarga exitosa</string>
    <string name="data_save_not">Aún no existen datos guardados</string>
    <string name="wifi_off">La Wifi está apagada</string>
    <string name="download_error">Error de conexión</string>
    <string name="search_drag">Búsqueda en dragones.uci.cu</string>
    <string name="search_octv">Búsqueda en octavitos.uci.cu</string>
    <string name="search_fac5">Búsqueda en facultad5.uci.cu</string>
    <string name="search_zorros">Búsqueda en zorros.uci.cu</string>
    <string name="search_glad">Búsqueda en facultad6.uci.cu</string>
    <string name="sdk_min">Se necesita android 2.3.3 en adelante</string>
    <string name="sdk_min_">Se necesita android 2.2 en adelante</string>
    <string name="Center">Centrar</string>
    <string name="location">Donde estoy</string>
    <string name="uci_map">Campus</string>
    <string name="Gps">GPS</string>
    <string name="search">Buscar</string>
    <string name="follow">Seguir Mov.</string>
    <string name="descrip">Descripción</string>
    <string name="descrip2">Escriba descripción del lugar</string>
    <string name="salvar">Salvar</string>
    <string name="salvar_fav">Salvar Favorito</string>
    <string name="salvar_fav_">Salvar Como Favorito</string>
    <string name="salvar_fav_1">Favorito salvado satisfactoriamente</string>
    <string name="edit_fav_1">Favorito editado satisfactoriamente</string>
    <string name="del_fav_1">Favorito eliminado satisfactoriamente</string>
    <string name="hide_">Ocultar</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="del">Eliminar</string>
    <string name="del_fav">Eliminar Favorito</string>
    <string name="opc_fav">Opciones Favorito</string>
    <string name="edit_fav">Editar Favorito</string>
    <string name="lat">Latitud</string>
    <string name="lon">Longitud</string>
    <string name="edit">Editar</string>
    <string name="gps_on">Gps activado</string>
    <string name="gps_off">Gps desactivado</string>
    <string name="follow_off">Debe desactivar el seguimiento primero</string>
    <string name="activate">¿Desea activarlo?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="unknow_position">Posición aún desconocida</string>
    <string name="error">Error</string>
    <string name="are_you_sure">Está seguro de eliminar : </string>
    <string name="correct_data">Debe introducir datos correctos</string>
    <string name="insert_descp">Debe introducir una descripción</string>
    <string name="favorite">Favorito</string>
    <string name="me">"Yo:"</string>
    <string name="me_">"Yo"</string>
    <string name="me_old">"Yo(Última posición conocida):"</string>
    <string name="marker">Marcador</string>
    <string name="loc">Localización:</string>
    <string name="cuota">Cuota</string>
    <string name="cuota_usada">Cuota usada</string>
    <string name="niv_nav">Nivel de navegación</string>
    <string name="vista_por">Vista en %</string>
    <string name="vista_val">Vista en valores</string>
    <string name="data_set">[CUOTA]</string>
    <string name="barchart">Gráfico de barras</string>
    <string name="piechart">Gráfico de pastel</string>
    <string name="salir">Salir</string>
    <string name="start">Inicio</string>
    <string name="log_in">Autenticación</string>
    <string name="connect">Conectar</string>
    <string name="connecting">Conectando</string>
    <string name="show_pass">Mostrar Contraseña</string>
    <string name="_search">Su búsqueda aquí</string>
    <string name="new_pos">Nueva posción añadida en:</string>
    <string name="close">Cerrar</string>
    <string name="cancel_all">(Cancela tareas pendientes)</string>
    <string name="not_show">No volver a mostrar</string>
    <string name="cancel_anyway">Esto cancelará las tareas pendientes.</string>
    <string name="warning">Atención</string>
    <string name="set">¿Qué desea hacer?</string>
    <string name="des">Descripción: </string>
    <string name="news">Noticias disponibles</string>
    <string name="users">Usuario encontrado</string>
    <string name="menus">Menú Actualizado</string>
    <string name="cuotas">Cuota Actualizada</string>
    <string name="horarios">Horario Actualizado</string>
    <string name="error_con_rss">Rss: Error de Conexión</string>
    <string name="download_rss">Rss: Descarga exitosa</string>
    <string name="error_con_dir">Directorio: Error de Conexión</string>
    <string name="download_dir">Directorio: Descarga exitosa</string>
    <string name="error_con_cuota">Cuota: Error de Conexión</string>
    <string name="download_cuota">Cuota: Descarga exitosa</string>
    <string name="error_con_ho">Horario: Error de Conexión</string>
    <string name="download_ho">Horario: Descarga exitosa</string>
    <string name="error_con_menu">Menú: Error de Conexión</string>
    <string name="download_menu">Menú: Descarga exitosa</string>
    <string name="uno">1</string>
    <string name="rest">Restante:</string>
    <string name="correct_login">Bienvenido a Campus Uci:</string>
    <string name="autenticando">Autenticando</string>
    <string name="please_wait">Por favor espere...</string>
    <string name="actions_settings">Configuración</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miércoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="faculty_1">Facultad 1</string>
    <string name="faculty_2">Facultad 2</string>
    <string name="faculty_3">Facultad 3</string>
    <string name="faculty_4">Facultad 4</string>
    <string name="faculty_5">Facultad 5</string>
    <string name="faculty_6">Facultad 6</string>
    <string name="faculty_7">Facultad 7</string>
    <string name="faculty_choose">Elija la Facultad</string>
    <string name="week_choose">Elija la Semana</string>
    <string name="group_choose">Elija el Grupo</string>
    <string name="load_weeks">Cargando Semanas</string>
    <string name="load_groups">Cargando Brigadas</string>
    <string name="load_schedule">Cargando Horario</string>
    <string name="load_schedule_">Esto puede demorar unos minutos...</string>
    <string name="load_weeks_s">Semanas Cargadas</string>
    <string name="load_groups_s">Brigadas Cargadas</string>
    <string name="week">Semana</string>
    <string name="group">Grupo</string>
    <string name="faculty">Facultad</string>
    <string name="verify">Verifique todos los datos</string>
    <string name="week_first">Debe cargar las semanas primero</string>
    <string name="last_searchs">Últimas Búsquedas</string>
    <string name="new_rss">Nuevo Rss</string>
    <string name="delete_all">Borrar las búsquedas recientes</string>
    <string name="url">Url</string>
    <string name="http">http://</string>
    <string name="custom_rss">Mis Rss</string>
    <string name="custom_rss_show">Mis Rss: Recientes</string>
    <string name="custom_rss_del">Mis Rss: Eliminar</string>
    <string name="help">Ayuda</string>
    <string name="remember_me">Recordarme</string>
</resources>