<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="wrap_content">

	<EditText
		android:singleLine="true"
		android:textColorHint="#82030303"
		android:hint="@string/name_"
		android:id="@+id/user"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="@dimen/customEntry"
		android:layout_marginTop="4dp"
		android:textColor="#000000" />

	<EditText
		android:singleLine="true"
		android:hint="@string/url"
		android:text="@string/http"
		android:textColorHint="#82030303"
		android:id="@+id/password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="@dimen/customEntry"
		android:layout_marginTop="4dp"
		android:textColor="#000000" />

</LinearLayout>